Fixed caption wrapping

--- a/src/assets/styling.css
+++ b/src/assets/styling.css
@@ -144,6 +144,7 @@
     width: 50%;
     text-align: center;
     font-size: xx-small;
+    overflow-wrap:break-word;
 }
 
 .footer {
